--- a/k8s/worker-deployment.yml
+++ b/k8s/worker-deployment.yml
@@ -15,4 +15,9 @@ spec:
       containers:
         - name: worker
           image: stephengrider/multi-worker
+          env: 
+            - name: REDIS_HOST
+              value: redis-cluster-ip-service
+            - name: REDIS_PORT
+              value: '6379'
           
